--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ Mako==1.3.8
 MarkupSafe==3.0.2
 mistune==3.0.2
 packaging==24.2
+psycopg2-binary==2.9.10
 pycparser==2.22
 python-dotenv==1.0.1
 PyYAML==6.0.2
