--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ async-timeout==5.0.1
 attrs==24.3.0
 azure-core==1.32.0
 azure-storage-blob==12.24.0
+bidict==0.23.1
 billiard==4.2.1
 blinker==1.9.0
 celery==5.4.0
@@ -20,11 +21,15 @@ Flask==3.1.0
 Flask-Cors==5.0.0
 Flask-Login==0.6.3
 Flask-Migrate==4.0.7
+Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
+flower==2.0.1
 greenlet==3.1.1
 gunicorn==23.0.0
+h11==0.14.0
 hiredis==3.1.0
+humanize==4.11.0
 idna==3.10
 isodate==0.7.2
 itsdangerous==2.2.0
@@ -36,22 +41,29 @@ Mako==1.3.8
 MarkupSafe==3.0.2
 mistune==3.0.2
 packaging==24.2
+prometheus_client==0.21.1
 prompt_toolkit==3.0.48
 psycopg2-binary==2.9.10
 pycparser==2.22
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-engineio==4.11.2
+python-socketio==5.12.1
+pytz==2024.2
 PyYAML==6.0.2
 redis==5.2.1
 referencing==0.35.1
 requests==2.32.3
 rpds-py==0.22.3
+simple-websocket==1.1.0
 six==1.17.0
 SQLAlchemy==2.0.36
+tornado==6.4.2
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.3.0
 vine==5.1.0
 wcwidth==0.2.13
 Werkzeug==3.1.3
+wsproto==1.2.0
 WTForms==3.2.1
