--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ click-repl==0.3.0
 cryptography==44.0.0
 flasgger==0.9.7.1
 Flask==3.1.0
+Flask-Admin==1.6.1
 Flask-Cors==5.0.0
 Flask-Login==0.6.3
 Flask-Migrate==4.0.7
