--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,5 @@
+version: '3.9'
+
 services:
   flask-app:
     image: jerrygeorge/shortcast:v1
@@ -5,24 +7,35 @@ services:
       - "5000:5000"
     env_file:
       - .env
+    networks:
+      - app-network
     depends_on:
-      - redis
-      - postgres
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
 
   redis:
     image: redis:7.2-alpine
     ports:
       - "6379:6379"
+    networks:
+      - app-network
     volumes:
       - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 3
 
   celery-worker:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: jerrygeorge/shortcast:v1
     command: celery -A app.celery worker --loglevel=info
     depends_on:
       - redis
+    networks:
+      - app-network
     env_file:
       - .env
 
@@ -32,8 +45,15 @@ services:
       - .env
     ports:
       - "5432:5432"
+    networks:
+      - app-network
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
 
   flower:
     image: mher/flower
@@ -51,7 +71,10 @@ services:
       --port=5555
       --address=0.0.0.0
 
-
 volumes:
   redis_data:
   postgres_data:
+
+networks:
+  app-network:
+    driver: bridge
